<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="ServiceCylinder" Id="{a99bf5d1-aaa3-4095-9742-005d9ab3fed8}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK ServiceCylinder
VAR_INPUT
	ptBlock : POINTER TO CylinderBlockBase;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	nCounter : WORD := 0;
	bMatched : BOOL;
	
	tmrWatchDog: TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Run timers
ptBlock^.TMR_WATCH_DOG(IN:= , PT:= , Q=> , ET=> );
ptBlock^.TMR_DELAY_TO_A(IN:= , PT:= , Q=> , ET=> );
ptBlock^.TMR_DELAY_TO_B(IN:= , PT:= , Q=> , ET=> );

// scan all sensor status
ptBlock^.BIT_A_MATCH := TRUE;
FOR nCounter := 1 TO ptBlock^.A_SENSOR_USED_COUNT BY 1 DO
	ptBlock^.BIT_A_MATCH := (ptBlock^.BIT_A_MATCH AND ptBlock^.SENSOR_A[nCounter]);
END_FOR
ptBlock^.BIT_B_MATCH := TRUE;
FOR nCounter := 1 TO ptBlock^.B_SENSOR_USED_COUNT BY 1 DO
	ptBlock^.BIT_B_MATCH := (ptBlock^.BIT_B_MATCH AND ptBlock^.SENSOR_B[nCounter]);
END_FOR

// if watch dog had been reset due to command changed in previous scan
// restart
IF NOT ptBlock^.TMR_WATCH_DOG.IN THEN
	ptBlock^.TMR_WATCH_DOG.IN := true;
END_IF

// once command changes , reset timer counter
IF ptBlock^.COMMAND_CACHED <> ptBlock^.LAST_COMMAND THEN
	//ptBlock^.TMR_WATCH_DOG.IN:=false;	//invalid , do not across a scan
	ptBlock^.TMR_WATCH_DOG.IN:=FALSE;
	ptBlock^.TMR_DELAY_TO_A.IN := (ptBlock^.COMMAND_CACHED=eCylinderCommands.COMMAND_A); //active A delay timer
	ptBlock^.TMR_DELAY_TO_B.IN := (ptBlock^.COMMAND_CACHED=eCylinderCommands.COMMAND_B); //if no sensor B , active B delay timer
	
	//reset done/warn
	ptBlock^.BIT_DONE := FALSE;
	ptBlock^.BIT_WARNING := FALSE;
	
	//output process
	FOR nCounter:=1 TO 2 BY 1 DO
		ptBlock^.ACT_A[nCounter] := (ptBlock^.COMMAND_CACHED = eCylinderCommands.COMMAND_A);
		ptBlock^.ACT_B[nCounter] := (ptBlock^.COMMAND_CACHED = eCylinderCommands.COMMAND_B);
	END_FOR
	
END_IF


// Check if match
CASE ptBlock^.COMMAND_CACHED OF
	eCylinderCommands.NO_COMMAND:
	bMatched:= TRUE;
	
	eCylinderCommands.COMMAND_A:
	IF ptBlock^.TMR_DELAY_TO_A.Q THEN
		bMatched:= (ptBlock^.BIT_A_MATCH ) AND (NOT ptBlock^.BIT_B_MATCH );
	END_IF
	
	eCylinderCommands.COMMAND_B:
	IF ptBlock^.TMR_DELAY_TO_B.Q THEN
		bMatched:= (NOT ptBlock^.BIT_A_MATCH ) AND (ptBlock^.BIT_B_MATCH );
	END_IF
		
END_CASE

// status update
ptBlock^.BIT_DONE := bMatched OR (NOT bMatched AND ptBlock^.BIT_WARN_SUPPRESS AND ptBlock^.TMR_WATCH_DOG.Q);
ptBlock^.BIT_WARNING := NOT bMatched AND NOT ptBlock^.BIT_WARN_SUPPRESS AND ptBlock^.TMR_WATCH_DOG.Q;


// cache last command
ptBlock^.LAST_COMMAND := ptBlock^.COMMAND_CACHED;
]]></ST>
    </Implementation>
    <LineIds Name="ServiceCylinder">
      <LineId Id="61" Count="2" />
      <LineId Id="59" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="14" Count="1" />
      <LineId Id="18" Count="4" />
      <LineId Id="99" Count="1" />
      <LineId Id="95" Count="0" />
      <LineId Id="97" Count="1" />
      <LineId Id="96" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="94" Count="0" />
      <LineId Id="65" Count="2" />
      <LineId Id="71" Count="3" />
      <LineId Id="83" Count="1" />
      <LineId Id="89" Count="2" />
      <LineId Id="88" Count="0" />
      <LineId Id="85" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="24" Count="0" />
      <LineId Id="42" Count="2" />
      <LineId Id="48" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="101" Count="2" />
      <LineId Id="58" Count="0" />
      <LineId Id="51" Count="0" />
      <LineId Id="105" Count="2" />
      <LineId Id="69" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="27" Count="0" />
      <LineId Id="92" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="75" Count="1" />
      <LineId Id="70" Count="0" />
      <LineId Id="35" Count="1" />
      <LineId Id="17" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>